--- a/client/src/app/core/nav-bar/nav-bar.component.html
+++ b/client/src/app/core/nav-bar/nav-bar.component.html
@@ -13,11 +13,11 @@
     fixed-top
   "
 >
-  <img src="assets/images/logo.png" alt="logo" style="max-height: 70px;" />
+  <img src="assets/images/logo.png" alt="logo" style="max-height: 70px;" class="logo" routerLink="/" />
   <nav class="my-2 my-md-0 mr-md-3 text-uppercase" style="font-size: larger;">
-    <a class="p-2 text-dark">Home</a>
-    <a class="p-2 text-dark">Shope</a>
-    <a class="p-2 text-dark">Contact</a>
+    <a class="p-2" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
+    <a class="p-2" routerLink="/shop" routerLinkActive="active">Shop</a>
+    <a class="p-2">Contact</a>
   </nav>
   <div class="d-flex align-items-center">
     <a style="position: relative;">
