--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,39 +1,39 @@
-<div class="container">
+<div class="container mt-3">
   <div class="row">
     <section class="col-3">
-      <h5 class="text-warning ml-3 my-3">Sort</h5>
-      <select class="custom-select mb-3" (change)="onSortSelected($event.target.value)">
-        <option *ngFor="let item of sortOptions" [value]="item.value">
-          {{item.name}}
-        </option>
-      </select>
-      <h5 class="text-warning ml-3 my-3">Brands</h5>
-      <ul class="list-group">
-        <li class="list-group-item" *ngFor="let item of brands" [class.active]="item.id === this.shopParams.brandId"
-          [value]="item.id" (click)="onBrandSelected(item.id)">
-          {{ item.name }}
-        </li>
-      </ul>
-      <h5 class="text-warning ml-3 my-3">Types</h5>
-      <ul class="list-group">
-        <li class="list-group-item" *ngFor="let item of types" [class.active]="item.id === this.shopParams.typeId"
-          [value]="item.id" (click)="onTypeSelected(item.id);">
-          {{ item.name }}
-        </li>
-      </ul>
+      <ng-container *ngIf="types && brands">
+        <h5 class="text-warning ml-3 mt-3 mb-4">Sort</h5>
+        <select class="custom-select mb-3" (change)="onSortSelected($event.target.value)">
+          <option *ngFor="let item of sortOptions" [value]="item.value">
+            {{item.name}}
+          </option>
+        </select>
+        <h5 class="text-warning ml-3 my-3">Brands</h5>
+        <ul class="list-group">
+          <li class="list-group-item" *ngFor="let item of brands" [class.active]="item.id === this.shopParams.brandId"
+            [value]="item.id" (click)="onBrandSelected(item.id)">
+            {{ item.name }}
+          </li>
+        </ul>
+        <h5 class="text-warning ml-3 my-3">Types</h5>
+        <ul class="list-group">
+          <li class="list-group-item" *ngFor="let item of types" [class.active]="item.id === this.shopParams.typeId"
+            [value]="item.id" (click)="onTypeSelected(item.id);">
+            {{ item.name }}
+          </li>
+        </ul>
+      </ng-container>
     </section>
     <section class="col-9">
       <div class="d-flex justify-content-between align-items-center pb-2">
-         
-        <app-paging-header
-          [pageSize] = "shopParams.pageSize"
-          [pageNumber] = "shopParams.pageNumber"
-          [totalCount] = "totalCount"
-        ></app-paging-header>
+
+        <app-paging-header [pageSize]="shopParams.pageSize" [pageNumber]="shopParams.pageNumber"
+          [totalCount]="totalCount"></app-paging-header>
 
 
-        <div class="form-inline mt-2">
-          <input (keyup.enter)="onSearch()" class="form-control" #search style="width: 300px;" placeholder="Search" type="text">
+        <div class="form-inline" *ngIf="products">
+          <input (keyup.enter)="onSearch()" class="form-control" #search style="width: 300px;" placeholder="Search"
+            type="text">
           <button (click)="onSearch()" class="btn btn-outline-primary my-2 mx-2">Search</button>
           <button (click)="onReset()" class="btn btn-outline-success my-2">Reset</button>
         </div>
@@ -44,13 +44,11 @@
         </div>
       </div>
       <div class="d-flex justify-content-center" *ngIf="totalCount > 0">
-        <app-pager
-        [totalCount] = "totalCount"
-        [pageSize] = "shopParams.pageSize"
-        (pageChanged) = "onPageChanged($event)"
-        ></app-pager>
+        <app-pager [totalCount]="totalCount" [pageSize]="shopParams.pageSize" (pageChanged)="onPageChanged($event)">
+        </app-pager>
 
       </div>
     </section>
   </div>
 </div>
+
